--- a/src/routes/App.css
+++ b/src/routes/App.css
@@ -1,66 +1,30 @@
-
-.ant_layout_aside {
-  position: relative;
-  min-height: 100%;
-}
-
-.ant_layout_aside .ant_layout_logo {
-  height: 32px;
-  background: #333;
-  border-radius: 6px;
-  margin: 16px 24px 16px 28px;
+.main_header{
+	background: #ececec;
+	line-height: 20px;
+	height: 20px;
+	font-size: 14px;
   text-align: center;
-  line-height: 32px;
+}
+.main_header span{
+  background: #333333;
+  color:#ffffff;
+  padding: 8px 12px;
+  border-radius: 4px;
+  font-weight: 100;
 }
 
-.ant_layout_aside .ant_layout_sider {
-  width: 224px;
-  background: #404040;
-  overflow: auto;
-  padding-bottom: 24px;
-  height: 100%;
-  position:fixed;
-  left:0;
-  top:0;
+.main_wrapper{
+  width: 92%;
+  margin: 0px auto;
+  border-radius: 4px;
+  overflow: hidden;
+  padding: 24px 0 0;
 }
 
-.ant_layout_aside .ant_layout_sider > .ant_menu {
-  margin-bottom: 20px;
-}
-
-.ant_layout_aside .ant_layout_header {
-  background: #fff;
-  height: 64px;
-  border-bottom: 1px solid #e9e9e9;
-}
-
-.ant_layout_aside .ant_layout_breadcrumb {
-  margin: 7px 0 -17px 24px;
-}
-
-.ant_layout_aside .ant_layout_main {
-  margin-left: 224px;
-}
-
-.ant_layout_aside .ant_layout_container {
-  margin: 24px 16px;
-}
-
-.ant_layout_aside .ant_layout_content {
-  background: #fff;
-  padding: 24px;
-}
-
-.ant_layout_aside .ant_layout_footer {
+.main_footer{
   height: 64px;
   line-height: 64px;
   text-align: center;
   font-size: 12px;
-  color: #999;
-  background: #fff;
-  border-top: 1px solid #e9e9e9;
-  width: 100%;
-  position: relative;
+  color: #999; 
 }
-
-
